2005-03-03  Roger While <simrw@sim-basis.de>

	* cobc.h, tree.h, parser.y, reserved.c, cobc.c,
	  tree.c, codegen.c, typeck.c :
	  Implement LINAGE
	  Implement -Os
	  Implement stripping of main/modules with O2 or Os
	  Fix dangling preprocess file after non-existent
	  file
	  Fix ASSIGN implicit data-item when not referenced
	  Implement some options for gcc >= 3
	  Change an incorrect long to int
	  Change bit fields from long to int

2005-02-22  Roger While <simrw@sim-basis.de>

	* codegen.c : Generated C code indentation
	  typeck.c : Check usage of 66 level with pointer

2005-02-15  Roger While <simrw@sim-basis.de>

	* codegen.c : Fix incorrect cast check,
	  LENGTH OF past as int (COMP-5)

2005-02-15  Roger While <simrw@sim-basis.de>

	* codegen.c : Fix .. BY VALUE LENGTH OF

2005-02-12  Roger While <simrw@sim-basis.de>

	* tree.h, tree.c, tyepck.c, field.c, codegen.c :
	  .. BY CONTENT LENGTH OF ..

2005-02-11  Roger While <simrw@sim-basis.de>

	* codegen.c : small optimization and module
	  initialization sequence.

2005-02-09  Roger While <simrw@sim-basis.de>

	* codegen.c : Change order of generating variable
	  assignment. In the generated C header, we now
	  have firstly the item definitions, then the
	  attributes and finally the cob_field items.
	  EXTERNAL variable pointers are generated local
	  to the static prog function.
	  We are fairly close to acieving Keisuke's
	  wish for generating just one source file.
 
2005-02-08  Roger While <simrw@sim-basis.de>

	* parser.y, codegen.c, tree.h, tree.c
	  Implement EXTERNAL AS Literal

2005-02-08  Roger While <simrw@sim-basis.de>

	* codegen.c : Rearrange generated code slightly
	  Do not gen stack values we do not need
	  Generate static function prototype so that we
	  can gen code in order : main (if appropiate),
	  entry points, static function

2005-02-07  Roger While <simrw@sim-basis.de>

	* cobc.c : Slight change for Cygwin
	* codegen.c : Adjust handling for EXTERNAL items
