@@ -79,6 +79,10 @@ binary-truncate: yes
 # Value: `native', `big-endian'
 binary-byteorder: big-endian
 
+# not-reserved:
+# Value: Word to be taken out of the reserved words list
+# (case independent)
+
 # Value: `ok', `archaic', `obsolete', `skip', `ignore', `unconformable'
 author-paragraph:		obsolete
 memory-size-clause:		obsolete
