@@ -3,3 +3,5 @@
 include "ibm.conf"
 
 name: "IBM COBOL for MVS & VM"
+
+not-reserved:	CYCLE
